dataset1235/2025-2/2947369575/users/1936540434/executions/1003782500_775838323.log
== RUN (2025-09-01 22:46:51)
-- CODE: 
ijdiqwjdijnmanaiuaiua = float(input( )))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    ijdiqwjdijnmanaiuaiua = float(input( )))
                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    ijdiqwjdijnmanaiuaiua = float(input( )))
                                           ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:00:16)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
v = (s*s-(s+1)*(s+1))
print(s)
print(round(v,0))
radians(v)
print(cos(v))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:53:12)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(round(s*s,1))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:18:31)
-- CODE: 
joao = float(input( ))
print (joao*4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:46:55)
-- CODE: 
ijdiqwjdijnmanaiuaiua = float(input( ))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
None
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:48:52)
-- CODE: 
k = float(input( ))
print(k**(1/2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:53:30)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(round(s*s,0))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:53:16)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(round(s*s,0))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:52:18)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(s*s)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:47:57)
-- CODE: 
k = float(input( ))
print(k**(1/2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:53:08)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(round(s*s,1))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:00:04)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
v = (s*s-(s+1)*(s+1))
print(s)
print(round(v,0))
radians(v)
print(cos(v))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:50:11)
-- CODE: 
k = float(input( ))
s = (k**(1/2))
print(s)


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:54:51)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(round(s*s,0))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:41:57)
-- CODE: 
set = float(sum(a,b))
     return float((a+b))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 2
    return float((a+b))
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 2
    return float((a+b))
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 23:02:09)
-- CODE: 
hahaha = float(input( ))
print (hahaha*4)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:49:23)
-- CODE: 
k = float(input( ))
print(k**(1/2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:59:12)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
v = (s*s-(s+1)*(s+1))
print(s)
print(round(v,0))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:41:36)
-- CODE: 
set = sum(a,b)
     return ("a+b")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 2
    return ("a+b")
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 2
    return ("a+b")
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:02:01)
-- CODE: 
hahaha = float(input( ))
print (hahaha*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
2.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
2.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:47:45)
-- CODE: 
k = float(input( ))
print(k**(1/2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:51:09)
-- CODE: 
k = float(input( ))
s = (k**(1/2))
print(s)
print(s*s)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:51:02)
-- CODE: 
k = float(input( ))
s = (k**(1/2))
print(s)
print(s*s)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:51:55)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(s*s)
sqrt(4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:48:03)
-- CODE: 
k = float(input( ))
print(k**(1/2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:47:22)
-- CODE: 
k = float(input( ))
print(k**2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:40:17)
-- CODE: 
bucetarosa = float(input( ))
print (bucetarosa*4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:50:51)
-- CODE: 
k = float(input( ))
s = (k**(1/2))
print(s)
print(s*s)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:48:46)
-- CODE: 
k = float(input( ))
print(k**(1/2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:41:20)
-- CODE: 
set = sum(a,b)
     return (a+b)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 2
    return (a+b)
IndentationError: unexpected indent
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 2
    return (a+b)
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:56:29)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(round(s*s-((s+1)*(s+1)),0))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:39:32)
-- CODE: 
joao = float(input( ))
print (joao*4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:54:29)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(round(s*s,0))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:59:23)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
v = (s*s-(s+1)*(s+1))
print(s)
print(round(v,0))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:55:43)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(round(s*s-(s**2-s**2),0))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:56:06)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(round(s*s-((s**2)*(s**2)),0))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:31:54)
-- CODE: 
joao = float(input( ))
print (joao*4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:53:18)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(round(s*s,0))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:52:50)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(round(s*s,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:52:02)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(s*s)
sqrt(4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:56:24)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(round(s*s-((s+1)*(s+1)),0))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:00:48)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
v = (s*s)
print(s)
print(round(v,0))
radians(v)
print(cos(v))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:59:02)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
v = (s*s-(s+1)*(s+1)
print(s)
print(round(v,0))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 5
    v = (s*s-(s+1)*(s+1)
        ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 5
    v = (s*s-(s+1)*(s+1)
        ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:48:39)
-- CODE: 
k = float(input( ))
print(k**(1/2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:47:34)
-- CODE: 
k = float(input( ))
print(k**1/2)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
0.5
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
0.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:48:49)
-- CODE: 
k = float(input( ))
print(k**(1/2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:52:59)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(round(s*s,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:00:21)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
v = (s*s-(s+1)*(s+1))
print(s)
print(round(v,0))
radians(v)
print(cos(v))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:52:09)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(s*s)
sqrt(4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:51:14)
-- CODE: 
k = float(input( ))
s = (k**(1/2))
print(s)
print(s*s)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:39:29)
-- CODE: 
joao = float(input( ))
print (joao*4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:46:49)
-- CODE: 
ijdiqwjdijnmanaiuaiua = float(input( )))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    ijdiqwjdijnmanaiuaiua = float(input( )))
                                           ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 1
    ijdiqwjdijnmanaiuaiua = float(input( )))
                                           ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:57:25)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
v = ((s*s-((s+1)*(s+1))
print(s)
print(round(v,0))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 5
    v = ((s*s-((s+1)*(s+1))
         ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 5
    v = ((s*s-((s+1)*(s+1))
         ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:49:38)
-- CODE: 
k = float(input( ))
print(k**(1/2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:57:15)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
v = (s*s-((s+1)*(s+1))
print(s)
print(round(v,0))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 5
    v = (s*s-((s+1)*(s+1))
        ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 5
    v = (s*s-((s+1)*(s+1))
        ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 23:02:07)
-- CODE: 
hahaha = float(input( ))
print (hahaha*4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:57:35)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
v = (s*s-(s+1)*(s+1)
print(s)
print(round(v,0))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 5
    v = (s*s-(s+1)*(s+1)
        ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 5
    v = (s*s-(s+1)*(s+1)
        ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:18:38)
-- CODE: 
joao = float(input( ))
print (joao*4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:56:34)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(round(s*s-((s+1)*(s+1)),0))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:54:35)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(round(s*s,0))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:50:57)
-- CODE: 
k = float(input( ))
s = (k**(1/2))
print(s)
print(s*s)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
1.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:54:56)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
print(s)
print(round(s*s,0))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
0.9999999999999999
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-01 22:59:03)
-- CODE: 
from math import *

k = float(input( ))
s = (k**(1/2))
v = (s*s-(s+1)*(s+1)
print(s)
print(round(v,0))

print((cos(k)**2)+(sin(k)**2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 5
    v = (s*s-(s+1)*(s+1)
        ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 5
    v = (s*s-(s+1)*(s+1)
        ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-27 23:18:35)
-- CODE: 
joao = float(input( ))
print (joao*4)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-09-01 22:40:22)
-- CODE: 
bucetarosa = float(input( ))
print (bucetarosa*4)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 23:18:42)
-- CODE: 
joao = float(input( ))
print (joao*4)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
